@@ -25,8 +25,10 @@ package io.crate.operation.reference.doc;
 import io.crate.exceptions.GroupByOnArrayUnsupportedException;
 import io.crate.operation.reference.doc.lucene.IpColumnReference;
 import org.apache.lucene.document.Document;
+import org.apache.lucene.document.Field;
 import org.apache.lucene.document.InetAddressPoint;
 import org.apache.lucene.document.SortedSetDocValuesField;
+import org.apache.lucene.document.StringField;
 import org.apache.lucene.index.IndexWriter;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.MatchAllDocsQuery;
@@ -38,54 +40,76 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 
+import java.io.IOException;
 import java.net.InetAddress;
 
+import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.core.Is.is;
 
 public class IpColumnReferenceTest extends DocLevelExpressionsTest {
 
+    private static final String IP_COLUMN = "i";
+    private static final String IP_ARRAY_COLUMN = "ia";
+
     @Rule
     public ExpectedException expectedException = ExpectedException.none();
 
-    private String column = "i";
-    private String column_array = "ia";
-
     @Override
     protected void insertValues(IndexWriter writer) throws Exception {
-        for (int i = 0; i < 10; i++) {
-            Document doc = new Document();
-            InetAddress address = InetAddresses.forString("192.168.0." + i);
-            doc.add(new SortedSetDocValuesField(column, new BytesRef(InetAddressPoint.encode(address))));
-            if (i == 0) {
-                address = InetAddresses.forString("192.168.0.1");
-                doc.add(new SortedSetDocValuesField(column_array, new BytesRef(InetAddressPoint.encode(address))));
-                address = InetAddresses.forString("192.168.0.2");
-                doc.add(new SortedSetDocValuesField(column_array, new BytesRef(InetAddressPoint.encode(address))));
-            }
-            writer.addDocument(doc);
-        }
+        addIPv4Values(writer);
+        addIPv6Values(writer);
+
+        // Doc without IP_COLUMN field to simulate NULL value
+        Document doc = new Document();
+        doc.add(new StringField("_id", Integer.toString(20), Field.Store.NO));
+        writer.addDocument(doc);
+    }
+
+    private static void addIPv6Values(IndexWriter writer) throws IOException {
         for (int i = 10; i < 20; i++) {
             Document doc = new Document();
+            doc.add(new StringField("_id", Integer.toString(i), Field.Store.NO));
             InetAddress address = InetAddresses.forString("7bd0:8082:2df8:487e:e0df:e7b5:9362:" + Integer.toHexString(i));
-            doc.add(new SortedSetDocValuesField(column, new BytesRef(InetAddressPoint.encode(address))));
+            doc.add(new SortedSetDocValuesField(IP_COLUMN, new BytesRef(InetAddressPoint.encode(address))));
+            writer.addDocument(doc);
+        }
+    }
+
+    private static void addIPv4Values(IndexWriter writer) throws IOException {
+        for (int i = 0; i < 10; i++) {
+            Document doc = new Document();
+            doc.add(new StringField("_id", Integer.toString(i), Field.Store.NO));
+            InetAddress address = InetAddresses.forString("192.168.0." + i);
+            doc.add(new SortedSetDocValuesField(IP_COLUMN, new BytesRef(InetAddressPoint.encode(address))));
+            if (i == 0) {
+                address = InetAddresses.forString("192.168.0.1");
+                doc.add(new SortedSetDocValuesField(IP_ARRAY_COLUMN, new BytesRef(InetAddressPoint.encode(address))));
+                address = InetAddresses.forString("192.168.0.2");
+                doc.add(new SortedSetDocValuesField(IP_ARRAY_COLUMN, new BytesRef(InetAddressPoint.encode(address))));
+            }
             writer.addDocument(doc);
         }
     }
 
     @Test
     public void testIpExpression() throws Exception {
-        IpColumnReference columnReference = new IpColumnReference(column);
+        IpColumnReference columnReference = new IpColumnReference(IP_COLUMN);
         columnReference.startCollect(ctx);
         columnReference.setNextReader(readerContext);
         IndexSearcher searcher = new IndexSearcher(readerContext.reader());
-        TopDocs topDocs = searcher.search(new MatchAllDocsQuery(), 20);
+        TopDocs topDocs = searcher.search(new MatchAllDocsQuery(), 21);
+        assertThat(topDocs.scoreDocs.length, is(21));
+
         int i = 0;
         for (ScoreDoc doc : topDocs.scoreDocs) {
             columnReference.setNextDocId(doc.doc);
-            if (i < 10) {
+            if (i == 20) {
+                assertThat(columnReference.value(), is(nullValue()));
+            } else if (i < 10) {
                 assertThat(columnReference.value(), is(new BytesRef("192.168.0." + i)));
             } else {
-                assertThat(columnReference.value(), is(new BytesRef("7bd0:8082:2df8:487e:e0df:e7b5:9362:" + Integer.toHexString(i))));
+                assertThat(columnReference.value(),
+                    is(new BytesRef("7bd0:8082:2df8:487e:e0df:e7b5:9362:" + Integer.toHexString(i))));
             }
             i++;
         }
@@ -93,11 +117,11 @@ public class IpColumnReferenceTest extends DocLevelExpressionsTest {
 
     @Test
     public void testIpExpressionOnArrayThrowsException() throws Exception {
-        IpColumnReference columnReference = new IpColumnReference(column_array);
+        IpColumnReference columnReference = new IpColumnReference(IP_ARRAY_COLUMN);
         columnReference.startCollect(ctx);
         columnReference.setNextReader(readerContext);
         IndexSearcher searcher = new IndexSearcher(readerContext.reader());
-        TopDocs topDocs = searcher.search(new MatchAllDocsQuery(), 20);
+        TopDocs topDocs = searcher.search(new MatchAllDocsQuery(), 10);
 
         ScoreDoc doc = topDocs.scoreDocs[0];
 
@@ -106,5 +130,4 @@ public class IpColumnReferenceTest extends DocLevelExpressionsTest {
 
         columnReference.setNextDocId(doc.doc);
     }
-
 }
